--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,8 +1,8 @@
 {
   "projectName": "test-sfc-cli",
-  "projectOwner": "liuyuanyuan_npm",
+  "projectOwner": "lyy",
   "repoType": "github",
-  "repoHost": "https://github.com",
+  "repoHost": "https://github.com/liuyuanyuannumberone/test-sfc-cli.git",
   "files": [
     "README.md"
   ],
