--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@liuyuanyuan_npm/test-sfc-cli",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "test-sfc-cli for Vue",
   "license": "MIT",
   "author": {
@@ -59,6 +59,8 @@
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.4.3",
     "@femessage/github-release-notes": "latest",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.5",
     "eslint": "^6.6.0",
@@ -76,11 +78,9 @@
     "minimist": "^1.2.0",
     "prettier": "1.18.2",
     "rollup": "^2.41.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^17.1.0",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-vue": "^4.7.2",
-    "standard-version": "^6.0.1",
+    "standard-version": "9.5.0",
     "stylelint": "^9.10.0",
     "stylelint-config-standard": "^18.2.0",
     "vue": "^2.6.10",
