--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@liuyuanyuan_npm/test-sfc-cli",
+  "name": "@charlesliu/test-sfc-cli",
   "version": "1.0.8",
   "description": "test-sfc-cli for Vue",
   "license": "MIT",
