--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "dev": "vue-styleguidist server",
-    "test": "jest --verbose",
+    "test": "jest",
     "build": "run-p build:*",
     "build:doc": "vue-styleguidist build",
     "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/test-sfc-cli.umd.js",
@@ -66,7 +66,7 @@
     "file-loader": "^3.0.1",
     "glob": "^7.1.3",
     "husky": "1.3.1",
-    "jest": "^24.8.0",
+    "jest": "29.4.2",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "lint-staged": "^8.1.0",
