--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "1.18.2",
     "rollup": "^2.41.0",
+    "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-vue": "^4.7.2",
     "standard-version": "9.5.0",
