--- a/package.json
+++ b/package.json
@@ -46,9 +46,13 @@
     "prepublishOnly": "run-s release-patch build",
     "release-patch": "standard-version --release-as patch",
     "release-minor": "standard-version --release-as minor",
-    "release-major": "standard-version --release-as major"
+    "release-major": "standard-version --release-as major",
+    "lint": "eslint \"**/*.@(js|vue)\" --fix"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vue-router": "3.5.1",
+    "vuex": "3.6.2"
+  },
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/plugin-transform-runtime": "^7.13.10",
@@ -56,6 +60,8 @@
     "@femessage/github-release-notes": "latest",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^17.1.0",
+    "ant-design-vue": "1.7.8",
+    "axios": "^1.3.2",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.5",
     "eslint": "^6.6.0",
