--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesliuy/test-sfc-cli",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "test-sfc-cli for Vue",
   "license": "MIT",
   "author": {
@@ -43,11 +43,11 @@
     "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/test-sfc-cli.umd.js",
     "build:es": "rollup --config build/rollup.config.js --format es --file dist/test-sfc-cli.esm.js",
     "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/test-sfc-cli.min.js",
-    "prepublishOnly": "run-s release-patch build",
     "release-patch": "standard-version --release-as patch",
     "release-minor": "standard-version --release-as minor",
     "release-major": "standard-version --release-as major",
-    "lint": "eslint \"**/*.@(js|vue)\" --fix"
+    "lint": "eslint \"**/*.@(js|vue)\" --fix",
+    "publish": "run-s release-patch build"
   },
   "dependencies": {
     "vue-router": "3.5.1",
