--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesliuy/test-sfc-cli",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "test-sfc-cli for Vue",
   "license": "MIT",
   "author": {
@@ -48,7 +48,7 @@
     "release-major": "standard-version --release-as major",
     "lint": "eslint \"**/*.@(js|vue)\" --fix",
     "pub": "run-s release-patch build publish",
-    "publish": "publish"
+    "publish": "npm publish"
   },
   "dependencies": {
     "vue-router": "3.5.1",
