--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesliuy/test-sfc-cli",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "test-sfc-cli for Vue",
   "license": "MIT",
   "author": {
@@ -50,6 +50,12 @@
     "pub": "run-s release-patch build publish",
     "publish": "npm publish"
   },
+  "peerDependencies": {
+    "vue": ">=2.6.0",
+    "vuex": ">=3.0.0",
+    "axios": ">=1.0.0",
+    "ant-design-vue": "1.7.8"
+  },
   "dependencies": {
     "vue-router": "3.5.1",
     "vuex": "3.6.2"
@@ -61,6 +67,7 @@
     "@femessage/github-release-notes": "latest",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "ant-design-vue": "1.7.8",
     "axios": "^1.3.2",
     "babel-eslint": "^10.0.3",
