--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesliuy/test-sfc-cli",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "test-sfc-cli for Vue",
   "license": "MIT",
   "author": {
@@ -51,10 +51,7 @@
     "lint": "eslint \"**/*.@(js|vue)\" --fix",
     "pub": "run-s release-patch build"
   },
-  "dependencies": {
-    "vue-router": "3.5.1",
-    "vuex": "3.6.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/plugin-transform-runtime": "^7.13.10",
