--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesliuy/test-sfc-cli",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "test-sfc-cli for Vue",
   "license": "MIT",
   "author": {
@@ -52,7 +52,7 @@
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
-    "lodash": ">=3.0.0"
+    "jquery": ">=2.1.3"
   },
   "dependencies": {},
   "devDependencies": {
@@ -76,6 +76,7 @@
     "glob": "^7.1.3",
     "husky": "1.3.1",
     "jest": "29.4.2",
+    "jquery": "^3.6.3",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "lint-staged": "^8.1.0",
